DeltaForgeV2/force-app/main/default/objects/DeltaForge__RollupCursor__c/DeltaForge__RollupCursor__c.object-meta.xml
<CustomObject>
    <description>Tracks rollup progress for windowed and resumable execution.</description>
    <label>Rollup Cursor</label>
    <nameField>
        <label>Rollup Cursor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rollup Cursors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>