DeltaForgeV2/force-app/main/default/objects/DeltaForge__RollupCursor__c/fields/BatchSize__c.field-meta.xml
<CustomField>
    <fullName>BatchSize__c</fullName>
    <description>Batch size used in the most recent rollup window.</description>
    <label>Batch Size</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>