DeltaForgeV2/force-app/main/default/objects/DeltaForge__RollupCursor__c/fields/CursorValue__c.field-meta.xml
<CustomField>
    <fullName>CursorValue__c</fullName>
    <description>Serialized cursor state used to resume rollup processing.</description>
    <label>Cursor Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>