DeltaForgeV2/force-app/main/default/objects/DeltaForge__RollupCursor__c/fields/LastProcessedAt__c.field-meta.xml
<CustomField>
    <fullName>LastProcessedAt__c</fullName>
    <description>Timestamp of the last successful rollup window.</description>
    <label>Last Processed At</label>
    <type>DateTime</type>
</CustomField>