DeltaForgeV2/force-app/main/default/objects/DeltaForge__RollupCursor__c/fields/ParentObject__c.field-meta.xml
<CustomField>
    <fullName>ParentObject__c</fullName>
    <description>API name of the parent object currently being rolled up.</description>
    <label>Parent Object</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>